--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -4,4 +4,5 @@
     <string name="my_books">Meine Bücher</string>
     <string name="settings">Einstellungen</string>
     <string name="search_books">Bücher suchen</string>
+    <string name="filter_all">Alle</string>
 </resources>
