--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="my_books">My Books</string>
     <string name="settings">Settings</string>
     <string name="search_books">Search Books</string>
+    <string name="filter_all">All</string>
 </resources>
