--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="settings">Settings</string>
     <string name="search_books">Search Books</string>
     <string name="filter_all">All</string>
+    <string name="trending_books">Trending Books</string>
 </resources>
