--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -6,4 +6,10 @@
     <string name="search_books">Search Books</string>
     <string name="filter_all">All</string>
     <string name="trending_books">Trending Books</string>
+    <string name="book_details">Book Details</string>
+    <string name="author">Author(s)</string>
+    <string name="status">Status</string>
+    <string name="no_data">No data</string>
+    <string name="already_read">Already Read</string>
+    <string name="unread">Unread</string>
 </resources>
