translated some Words

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -7,9 +7,13 @@
     <string name="filter_all">Alle</string>
     <string name="trending_books">Beliebte Bücher</string>
     <string name="book_details">Buchdetails</string>
-    <string name="author">Autor(en)</string>
     <string name="status">Status</string>
     <string name="no_data">Keine Angabe</string>
     <string name="already_read">Bereits gelesen</string>
     <string name="unread">Noch nicht gelesen</string>
+    <string name="title">Titel</string>
+    <string name="isbn">ISBN</string>
+    <string name="author_s">Autor:innen</string>
+    <string name="author">Autor:in</string>
+    <string name="search">Suche..</string>
 </resources>
