changed Filter String

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -16,4 +16,5 @@
     <string name="author_s">Autor:innen</string>
     <string name="author">Autor:in</string>
     <string name="search">Suche..</string>
+    <string name="search_by">Suche nach</string>
 </resources>
