--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="author_s">Author(s)</string>
     <string name="author">Author</string>
     <string name="search">Search..</string>
+    <string name="search_by">Search by</string>
 </resources>
